--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,2 +1,2 @@
 <h1>About</h1>
-<p>This application was created for no other reason than an excess of spare time</p>
+<p>This application was created for no other reason than an excess of spare time. And a desire to track it.</p>
