--- a/app/templates/components/timer-user-controls.hbs
+++ b/app/templates/components/timer-user-controls.hbs
@@ -1,1 +1,5 @@
 <h2>Timer</h2>
+
+<p>{{ duration }}</p>
+<button type="submit" class="btn btn-sm btn-default" {{action "start"}}>Start</button>
+<button type="submit" class="btn btn-sm btn-default" {{action "stop"}}>Stop</button>
