--- a/app/templates/components/timer-user-controls.hbs
+++ b/app/templates/components/timer-user-controls.hbs
@@ -3,3 +3,4 @@
 <p>{{ duration }}</p>
 <button type="submit" class="btn btn-sm btn-default" {{action "start"}}>Start</button>
 <button type="submit" class="btn btn-sm btn-default" {{action "stop"}}>Stop</button>
+<button type="submit" class="btn btn-sm btn-default" {{action "stop" true}}>Reset</button>
