Switch between start/stop button depending on isRunning condition

--- a/app/templates/components/timer-user-controls.hbs
+++ b/app/templates/components/timer-user-controls.hbs
@@ -1,6 +1,9 @@
 <h2>Timer</h2>
 
 <p>{{ duration }}</p>
-<button type="submit" class="btn btn-sm btn-default" {{action "start"}}>Start</button>
+{{#if isRunning}}
 <button type="submit" class="btn btn-sm btn-default" {{action "stop"}}>Stop</button>
+{{else}}
+<button type="submit" class="btn btn-sm btn-default" {{action "start"}}>Start</button>
+{{/if}}
 <button type="submit" class="btn btn-sm btn-default" {{action "stop" true}}>Reset</button>
