--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -7,8 +7,10 @@
 
 <div class="container">
 
-  {{ timer-user-controls }}
-  
+  <div class="container timercontrol">
+    {{ timer-user-controls }}
+  </div>
+
   <hr>
 
   <footer>
