--- a/app/templates/components/timer-user-controls.hbs
+++ b/app/templates/components/timer-user-controls.hbs
@@ -1,16 +1,21 @@
-<div class="circle">
-    <h2 class="duration">{{ format-datetime duration "MM:SS.sss" }}</h2>
-</div>
+<div>
+    <div class="circle">
+        <h2 class="duration">{{ format-datetime duration "MM:SS.sss" }}</h2>
+    </div>
 
-{{#if isRunning}}
-<button class="btn btn-primary btn-lg stopbutton" type="submit" {{action "stop"}}>
-    <span class="glyphicon glyphicon-pause"></span>
-</button>
-{{else}}
-<button class="btn btn-primary btn-lg startbutton" type="submit" {{action "start"}}>
-    <span class="glyphicon glyphicon-play"></span>
-</button>
+    {{#if isRunning}}
+    <button class="btn btn-primary btn-lg stopbutton" type="submit" {{action "stop"}}>
+        <span class="glyphicon glyphicon-pause"></span>
+    </button>
+    {{else}}
+    <button class="btn btn-primary btn-lg startbutton" type="submit" {{action "start"}}>
+        <span class="glyphicon glyphicon-play"></span>
+    </button>
+    {{/if}}
+    <button class="btn btn-primary btn-lg resetbutton" type="submit" {{action "stop" true}}>
+        <span class="glyphicon glyphicon-repeat"></span>
+    </button>
+</div>
+{{#if showSubmitButton}}
+<button class="btn btn-secondary btn-lg submitbutton" type="submit" {{action "submitTime"}}>Submit</button>
 {{/if}}
-<button class="btn btn-primary btn-lg resetbutton" type="submit" {{action "stop" true}}>
-    <span class="glyphicon glyphicon-repeat"></span>
-</button>
