--- a/app/templates/timetable.hbs
+++ b/app/templates/timetable.hbs
@@ -4,9 +4,9 @@
   <p>We hope you find exactly what you're looking for in a place to stay.</p>
 </div>
 
-{{#each model as |time|}}
+{{#each model as |timelog|}}
     <article>
-        <h3>{{ time.timestamp }}</h3>
-        <div class="detail">{{ time.elapsedTime }}</div>
+        <h3>{{ timelog.timestampReadable }}</h3>
+        <div class="detail">{{ format-datetime timelog.elapsedtime "MM:SS.sss" }}</div>
     </article>
 {{/each}}
