--- a/app/templates/components/timer-user-controls.hbs
+++ b/app/templates/components/timer-user-controls.hbs
@@ -17,5 +17,5 @@
     </button>
 </div>
 {{#if showSubmitButton}}
-<button class="btn btn-secondary btn-lg submitbutton" type="submit" {{action "submitTime"}}>Submit</button>
+<button class="btn btn-secondary btn-lg submitbutton" type="submit" {{action "submit"}}>Submit</button>
 {{/if}}
